fix: fixed bug on invisible menu names and close button

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -229,7 +229,7 @@ nav.header-down {
 }
 
 .menuListOpen {
-  animation: menuListOpenAnim 1s ease-in-out forwards;
+  // animation: menuListOpenAnim 1s ease-in-out forwards;
 }
 
 .menuListClose {
